--- a/src/app/comun/panel-ubicacion/panel-ubicacion.component.html
+++ b/src/app/comun/panel-ubicacion/panel-ubicacion.component.html
@@ -71,21 +71,21 @@
           }
 
           @if (this.sesion.render.heroes.length < 3) {
-            <div class="contenedorReclutar">
+            <div class="contenedorReclutar" (click)="reclutarHeroe()">
               <img class="imagenAdd" src="assets/General/Simbolo_Mas.svg"/>
               <div class="texto Texto1">Reclutar</div>
             </div>
           }
 
           @if (this.sesion.render.heroes.length < 4) {
-            <div class="contenedorReclutar">
+            <div class="contenedorReclutar" (click)="reclutarHeroe()">
               <img class="imagenAdd" src="assets/General/Simbolo_Mas.svg"/>
               <div class="texto Texto1">Reclutar</div>
             </div>
           }
 
           @if (this.sesion.render.heroes.length < 5) {
-            <div class="contenedorReclutar">
+            <div class="contenedorReclutar" (click)="reclutarHeroe()">
               <img class="imagenAdd" src="assets/General/Simbolo_Mas.svg"/>
               <div class="texto Texto1">Reclutar</div>
             </div>
