--- a/src/app/comun/mazmorra/mazmorra.component.html
+++ b/src/app/comun/mazmorra/mazmorra.component.html
@@ -212,8 +212,8 @@
       [vida]="mazmorraService.sesion.render.heroes[mazmorraService.estadoControl.heroePropioIndex].puntosVida"
       [energia]="mazmorraService.sesion.render.heroes[mazmorraService.estadoControl.heroePropioIndex].energia"
       [energiaFutura]="mazmorraService.sesion.render.heroes[mazmorraService.estadoControl.heroePropioIndex].energiaFutura"
-      [turno]= "mazmorraService.estadoControl.esTurnoPropio"
-      [habilitar]="mazmorraService.estadoControl.esTurnoPropio || mazmorraService.permitirMultiControl" >
+      [turno]= "mazmorraService.estadoControl.esTurnoHeroe"
+      [habilitar]="mazmorraService.estadoControl.esTurnoHeroe || mazmorraService.permitirMultiControl" >
     </panelControlComponent>
   }
 
