--- a/src/app/comun/mazmorra/mazmorra.component.sass
+++ b/src/app/comun/mazmorra/mazmorra.component.sass
@@ -14,6 +14,34 @@
   top: 40%
   z-index: 10
 
+#temporizadorGeneral
+  position: absolute
+  display: flex
+  justify-content: center
+  align-items: center
+  background-color: rgba(0, 0, 0, 0.5)
+  color: white
+  z-index: 1
+  width: 5%
+  height: 5%
+  top: 63%
+  left: 7.5%
+  border-radius: 100vh
+
+#temporizadorBuff
+  position: absolute
+  display: flex
+  justify-content: center
+  align-items: center
+  background-color: rgba(0, 0, 0, 0.5)
+  color: white
+  z-index: 1
+  width: 5%
+  height: 5%
+  top: 70%
+  left: 7.5%
+  border-radius: 100vh
+
 #tiempo
   position: absolute
   display: none
