--- a/src/app/comun/ajustes/ajustes.component.html
+++ b/src/app/comun/ajustes/ajustes.component.html
@@ -7,12 +7,14 @@
       <hr class='line' id="line_top">
       <div class="pestanaAjustes">
         <div class="titulo2 Texto2">Información</div>
+        <!--
         <div class="mensajeTexto Texto3">Versión: {{appService.version}}</div>
         <div class="mensajeTexto Texto3">Perfil: {{appService.validacion.nombre+"-"+appService.validacion.tipo}}</div>
         <div class="mensajeTexto Texto3">Datos Oficiales: {{appService.activarDatosOficiales}}</div>
+        -->
         <label class="toggle-container">
           <input type="checkbox" class="real-checkbox">
-          <div class="toggle-button" (click)="appService.toggleDatosOficiales()"></div>
+          <div class="toggle-button" ></div>
         </label>
         <div class="titulo2 Texto2">Sonido</div>
         <div class="mensajeTexto textoModificador Texto3">Volumen General</div>
