--- a/src/app/comun/desarrollador/dungeonBuilderComponent/dungeonBuilder.component.html
+++ b/src/app/comun/desarrollador/dungeonBuilderComponent/dungeonBuilder.component.html
@@ -51,7 +51,7 @@
           <div class="boton" (click)="setEstadoMazmorra('salas')">SALAS</div>
           <div class="boton" (click)="setEstadoMazmorra('enemigos')">ENEMIGOS</div>
           <div class="boton" (click)="setEstadoMazmorra('eventos')">EVENTOS</div>
-          <div class="boton" (click)="setEstadoMazmorra('')">
+          <div class="boton" (click)="setEstadoMazmorra('reticula')">
             <img src="assets/desarrollador/isometrico.png">
           </div>
           <div class="boton" (click)="setEstadoMazmorra('isometrico')">
