Correcciones Menores IFEMA

--- a/src/app/comun/crear-heroe/crear-heroe.component.sass
+++ b/src/app/comun/crear-heroe/crear-heroe.component.sass
@@ -5,6 +5,10 @@
     background-color: rgba(black, 0.4)
 
 ::ng-deep .contenedorCrearHeroe
+  position: static
+  width: 90vw
+  height: 90vh
+  width: 100%
   display: flex
   justify-content: center
   align-items: center
@@ -95,7 +99,7 @@
                 grid-area: 5 / 2 / 6 / 4
                 width: 80%
                 left: 10%
-                bottom: 20% 
+                bottom: 20%
                 border: #f3b95c solid 3px
                 border-radius: 20px
                 background-color: $colorFondo2
@@ -123,16 +127,16 @@
                     width: 100%
                     padding-top: 100%
                     border: 2px solid $colorTexto
-                    margin-bottom: 15% 
+                    margin-bottom: 15%
                     &.masculino
                         background-image: url("../../../assets/General/Icono-Masculino.png")
-                        background-size: 80% 80% 
+                        background-size: 80% 80%
                         background-position: center
                         background-repeat: no-repeat
 
                     &.femenino
                         background-image: url("../../../assets/General/Icono-Femenino.png")
-                        background-size: 80% 80% 
+                        background-size: 80% 80%
                         background-position: center
                         background-repeat: no-repeat
                     .botonInteriorGenero
@@ -149,12 +153,12 @@
             width: 60%
             height: 100%
             align-items: center
-            
+
             .tituloClase
                 position: relative
                 width: 90%
                 text-align: center
-                
+
             .descripcionClase
                 position: relative
                 width: 95%
