--- a/src/styles.sass
+++ b/src/styles.sass
@@ -36,6 +36,12 @@ $angular-dark-theme: mat.define-dark-theme( ( color: ( primary: $angular-primary
       .mat-mdc-dialog-surface
         background-color: transparent
 
+.mdc-text-field--filled
+  background-color: transparent !important
+
+.mdc-text-field
+  padding: 0px !important
+
 .darkMode
   @include mat.all-component-colors($angular-dark-theme)
 
