--- a/src/app/comun/mazmorra/mazmorra.component.sass
+++ b/src/app/comun/mazmorra/mazmorra.component.sass
@@ -14,6 +14,24 @@
   top: 40%
   z-index: 10
 
+#tiraDesplegable
+  position: relative
+  display: inline-block
+  width: 3vw
+  height: 100%
+  z-index: 1
+  background-color: $colorFondo2
+  text-orientation: upright
+  writing-mode: vertical-rl
+  color: $colorTexto
+  text-align: center
+  font-family: ui-monospace
+  line-height: 150%
+  transition: transform 0.5s
+  transform: translateX(-12vw)
+  &.desplegado
+    transform: translateX(0)
+
 #temporizadorGeneral
   position: absolute
   display: flex
@@ -24,8 +42,8 @@
   z-index: 1
   width: 5%
   height: 5%
-  top: 63%
-  left: 7.5%
+  top: 43%
+  left: 16.5%
   border-radius: 100vh
 
 #temporizadorBuff
@@ -38,8 +56,8 @@
   z-index: 1
   width: 5%
   height: 5%
-  top: 70%
-  left: 7.5%
+  top: 50%
+  left: 16.5%
   border-radius: 100vh
 
 #tiempo
@@ -232,18 +250,45 @@
   position: absolute
   z-index: 5
 
+#PanelGeneral
+  position: absolute
+  //z-index: 13
+  width: 12%
+  height: 100%
+  transition: transform 0.5s
+  &.replegado
+      transform: translateX(-100%)
+  @include media("<=tablet")
+      width: 15%
+      &.replegado
+        transform: translateX(-100%)
+  @include media("<=phone")
+      width: 12%
+      &.replegado
+        transform: translateX(-100%)
+
 #contenedorMainWindow
     position: absolute
     top: 0
     left: 12%
     width: 88%
     height: 100%
+    transition: all 0.5s
+    &.replegado
+      left: 0
+      width: 100%
     @include media("<=tablet")
         left: 15%
         width: 85%
+        &.replegado
+          left: 0
+          width: 100%
     @include media("<=phone")
         left: 12%
         width: 88%
+        &.replegado
+          left: 0
+          width: 100%
 
 #experiencia
     position: absolute
@@ -274,19 +319,30 @@
 
 #contenedorHistorial
     position: absolute
-    top: 46%
-    left: -2%
-    height: 7%
+    top: 28%
+    left: 4%
+    height: 12%
     aspect-ratio: 1
-    z-index: 13
+    z-index: 12
     border-radius: 100%
-    background-color: $colorFondo1
-    border: 2px solid $colorTexto
+    //background-color: $colorFondo1
+    //border: 2px solid $colorTexto
     #iconoHistorial
       position: relative
       width: 100%
       height: 100%
 
+#contenedorBotin
+    position: absolute
+    top: 60%
+    left: 4%
+    height: 15%
+    aspect-ratio: 1
+    z-index: 12
+    #iconoBotin
+      position: relative
+      width: 100%
+      height: 100%
 
 #iconoEstadisticas
     position: absolute
@@ -353,11 +409,16 @@
 #historial
   position: absolute
   z-index: 13
-  transition: transform 1s
+  //transition: transform 1s
+  transition: opacity 0.5s
   &.mostrarHistorial
-    transform: translateX(0vw)
+    //transform: translateX(0vw)
+    opacity: 1
+    pointer-events: all
   &.ocultarHistorial
-    transform: translateX(-12vw)
+    //transform: translateX(-100vw)
+    opacity: 0
+    pointer-events: none
 
 
 #contenedorHeroes
