--- a/src/app/comun/panel-general/panel-general.component.sass
+++ b/src/app/comun/panel-general/panel-general.component.sass
@@ -3,19 +3,17 @@
 @import "../../../breakpoints.scss"
 
 .contenedorPanelGeneral
-    position: absolute
-    display: flex
+    position: relative
+    display: inline-flex
+    vertical-align: top
     flex-direction: column
     justify-content: space-evenly
     top: 0
     left: 0
-    width: 12%
+    width: 100%
     height: 100%
     background-color: $colorFondo1
-    @include media("<=tablet")
-        width: 15%
-    @include media("<=phone")
-        width: 12%
+    transition: transform 0.5s
 
     .framePanelGeneral
         position: absolute
@@ -36,12 +34,12 @@
         -webkit-box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.75)
         -moz-box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.75)
         box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.75)
-        
+
     .contenedorBotonGeneral
         position: relative
         display: flex
         flex-direction: column
-        height: 18% 
+        height: 18%
         width: 100%
         z-index: 12
         align-items: center
@@ -66,17 +64,34 @@
         position: absolute
         width: 11.1%
         height: 22%
-        left: 1% 
+        left: 1%
         top: 21%
         border-top: 1px solid
         border-left: 1px solid
         border-bottom: 1px solid
-        background-size: 100% 100% 
+        background-size: 100% 100%
         background-color: #231c1c
-        background-size: 100% 100% 
+        background-size: 100% 100%
         box-sizing: border-box
         border-radius: 5px 0px 0px 5px
         -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
         -moz-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
         box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+
+#tiraDesplegable
+  position: absolute
+  display: inline-block
+  left: 100%
+  width: 30%
+  height: 100%
+  z-index: 1
+  background-color: $colorFondo2
+  text-orientation: upright
+  writing-mode: vertical-rl
+  color: $colorTexto
+  text-align: center
+  font-family: ui-monospace
+  line-height: 200%
+
+
 
