--- a/src/app/comun/panel-ubicacion/panel-ubicacion.component.html
+++ b/src/app/comun/panel-ubicacion/panel-ubicacion.component.html
@@ -59,7 +59,7 @@
           @for (heroe of this.sesion.render.heroes; track heroe; let i = $index) {
             <div class="contenedorReclutar">
               <heroeComponent  [desplegable]="false" [desplegadoDefecto]="false" [renderHeroe]="heroe" [seleccionable]="false" [pantalla]="'inMap'" class="panelHeroe"></heroeComponent>
-              <div class="texto Texto1">{{this.sesion.render.heroes[0].nombre}}</div>
+              <div class="texto Texto1">{{this.sesion.render.heroes[i].nombre}}</div>
             </div>
           }
 
